--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AST_CAN
-version=0.0.1
-author=Atlantis Specialist Technologies
-maintainer=Atlantis Specialist Technologies
-sentence=AST CAN library
+version=1.0.0
+author=James Blakey-Milner, Atlantis Specialist Technologies <james@atlantisgroup.co.za>
+maintainer=James Blakey-Milner, <james@atlantisgroup.co.za>
+sentence=This library allows for use of the hardware CAN port on the CAN485 board
 paragraph=This library allows for use of the hardware CAN port on the CAN485 board
-category=Uncategorized
-url=*
-architectures=*
+category=Communications
+url=https://github.com/Atlantis-Specialist-Technologies/CAN485
+architectures=avr
